--- a/css/main.scss
+++ b/css/main.scss
@@ -262,6 +262,37 @@ button {
   }
 }
 
+.arrow-container {
+  position: absolute;
+  bottom: 50px;
+  //justify-content: center;
+  left: 50%;
+  height: 50px;
+  transform: translateX(-50%);
+  width: 50px;
+  text-align: center;
+  animation-duration: 1s;
+  animation-name: fadein;
+  //animation-delay: 1s;
+}
+
+.arrow {
+  position: relative;
+  border: solid #80705a;
+  border-width: 0 2px 2px 0;
+  display: inline-block;
+  padding: 10px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  cursor: pointer;
+  top: 0;
+  transition: top ease-in-out 0.5s;
+}
+
+.arrow:hover {
+  top: -10px;
+}
+
 .video-section {
   position: relative;
   overflow: hidden;
@@ -364,6 +395,898 @@ button {
   background-color: #e0dbd2;
 }
 
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
+
 h1 {
+  //font-size: 2.5rem;
   font-family: "Gotham Bold";
+  font-size: clamp(1.4rem, 4vw, 2rem);
+  line-height: 1.2;
+  text-transform: uppercase;
+}
+
+.projet-title,
+.origine-title,
+.produit-title,
+.equipe-title,
+.florent-title,
+.partenaires-title {
+  color: #80705a;
+}
+
+/* PROJET & EQUIPE*/
+
+.container-projet {
+  height: 100vh;
+  width: 200%;
+  display: flex;
+}
+
+.container-equipe {
+  height: 100vh;
+  width: 200%;
+  display: flex;
+}
+
+.projet-slide,
+.origine-slide {
+  height: 100%;
+  width: 100vw;
+
+  .projet-image,
+  .origine-image {
+    height: 100vh;
+    width: 49.6vw;
+    object-fit: cover;
+  }
+
+  .image {
+    height: 100vh;
+    width: 100%;
+    object-fit: cover;
+    z-index: 0;
+  }
+}
+
+.equipe-slide,
+.florent-slide {
+  height: 100%;
+  width: 100vw;
+
+  .equipe-image,
+  .florent-image {
+    height: 100vh;
+    width: 49.6vw;
+    object-fit: cover;
+  }
+
+  .image {
+    height: 100vh;
+    width: 100%;
+    object-fit: cover;
+    z-index: 0;
+  }
+}
+
+.projet-slide {
+  position: relative;
+}
+
+.origine-slide {
+  position: relative;
+}
+
+.equipe-slide {
+  position: relative;
+}
+
+.florent-slide {
+  position: relative;
+}
+
+.projet-content {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  margin: 0;
+  padding: 0;
+  width: 50%;
+
+  .projet-article {
+    margin-top: 150px;
+    display: flex;
+    flex-direction: column;
+    width: 85%;
+    overflow: hidden;
+
+    padding: 0 calc(max(10%, 100px));
+    text-align: justify;
+    p {
+      line-height: 2em;
+    }
+  }
+
+  .projet-title {
+    color: #80705a;
+  }
+}
+
+.equipe-content {
+  position: absolute;
+  left: 50%;
+  top: 0;
+  margin: 0;
+  padding: 0;
+  width: 50%;
+
+  .equipe-article {
+    margin-top: 150px;
+    display: flex;
+    flex-direction: column;
+    width: 85%;
+    overflow: hidden;
+
+    padding: 0 calc(max(10%, 100px));
+    text-align: justify;
+    p {
+      line-height: 2em;
+    }
+  }
+
+  .equipe-title {
+    color: #80705a;
+  }
+}
+
+.titre {
+  height: 20%;
+  min-height: 100px;
+  align-items: flex-end;
+  display: flex;
+  position: relative;
+  width: 100%;
+}
+
+.article {
+  height: 50%;
+  min-height: 25vh;
+  margin-top: 50px;
+  /* display: flex;
+  align-items: center; */
+  position: relative;
+  width: 100%;
+  font-size: 1em;
+}
+
+.pagination {
+  height: 25%;
+  padding: 0 10%;
+  display: flex;
+  align-items: flex-start;
+  position: relative;
+  width: 100%;
+}
+
+.projet-pagination,
+.equipe-pagination {
+  position: relative;
+  display: inline-block;
+  font-family: "Gotham", sans-serif;
+  justify-content: left;
+  padding: 0;
+}
+
+.projet-page-btn,
+.equipe-page-btn {
+  display: inline-block;
+  text-decoration: none;
+  font-size: clamp(1.6rem, 4vw, 2.4rem);
+  color: #525252;
+  padding: 0 10px;
+  cursor: pointer;
+  width: 50px;
+  text-align: center;
+}
+
+.projet-page-btn + .projet-page-btn,
+.equipe-page-btn + .equipe-page-btn {
+  margin: 1em;
+}
+
+.projet-page-btn::after,
+.equipe-page-btn::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #525252;
+  transition: width 0.3s;
+}
+.projet-page-btn:hover::after,
+.equipe-page-btn:hover::after {
+  width: 100%;
+  transition: width 0.3s;
+}
+
+.active {
+  color: #222;
+}
+
+.active::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: #222;
+}
+
+/* PRODUIT */
+
+.produit-section {
+  width: 100%;
+}
+
+.a-propos {
+  height: 20%;
+  min-height: 200px;
+  // margin-top: 150px;
+  display: flex;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  justify-content: center;
+}
+
+.a-propos-both {
+  height: 100%;
+  padding-top: 150px;
+  padding-bottom: 50px;
+}
+
+.produit-title {
+  text-align: center;
+  margin-bottom: 0;
+  color: #80705a;
+  font-family: "Gotham Book";
+}
+
+.produit-apropos-text {
+  text-align: center;
+  font-size: clamp(1rem, 2vw, 1.4rem);
+  font-family: "Gotham Book";
+  line-height: 2.4em;
+  font-weight: 500;
+}
+
+.produit-1,
+.produit-2,
+.produit-3,
+.produit-4,
+.produit-5 {
+  height: 75%;
+  min-height: 75vh;
+  margin-bottom: 10px;
+}
+
+.col {
+  //display: flex;
+  width: 50%;
+  height: 100%;
+}
+
+.produit-square {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  min-height: 75vh;
+  background-color: #e7e4e0;
+  position: relative;
+}
+
+.produit-article-title {
+  color: #80705a;
+  text-align: left;
+  font-family: "Gotham Bold";
+  padding-bottom: 25px;
+  border-bottom: 2px solid #80705a;
+}
+
+.produit-article {
+  padding: 0 calc(max(10%, 50px)) 0 calc(max(20%, 100px));
+  text-align: justify;
+  p {
+    line-height: 2em;
+  }
+}
+
+.produit-article-text {
+  padding-top: 25px;
+}
+
+.produit-image-box {
+  height: 50%;
+  width: 50%;
+  min-height: 75vh;
+  min-width: 50vh;
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+}
+
+.produit-image {
+  height: 100%;
+  width: 100%;
+  min-height: 75vh;
+  min-width: 50vh;
+  background-position: center center;
+  background-size: cover;
+  transition: transform 500ms ease-in-out;
+}
+
+.produit-image-box:hover .produit-image {
+  transform: scale(1.1);
+  opacity: 0.9;
+}
+
+.image1 {
+  background-image: url(../assets/images/chimie.jpg);
+}
+
+.image2 {
+  background-image: url(../assets/images/creme_mains.jpeg);
+}
+
+.image3 {
+  background-image: url(../assets/images/water_drops.jpeg);
+}
+
+.image4 {
+  background-image: url(../assets/images/rue_lyon.jpg);
+  background-position-y: 0px;
+}
+
+.image5 {
+  background-image: url(../assets/images/carte_paiement.jpeg);
+}
+
+.left {
+  float: left;
+  border-right: 5px solid #fff;
+  //margin-left: 5px;
+}
+
+.right {
+  float: right;
+  border-left: 5px solid #fff;
+}
+
+.number {
+  z-index: 0;
+  font-family: "Gotham Bold";
+  opacity: 0.25;
+  color: #80705a;
+  font-size: clamp(16rem, calc(4vw + 20rem), 48rem);
+  line-height: 1;
+  position: absolute;
+  left: 5%;
+  top: 5%;
+  max-height: 75%;
+}
+
+.separator {
+  display: block;
+  background-color: #fff;
+  width: 100%;
+  height: 200px;
+}
+
+/* Timing */
+
+.timing-bg {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  min-height: 100vh;
+  position: relative;
+  justify-content: center;
+  background-image: url(../assets/images/timing_office.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.timing-title {
+  color: #80705a;
+  font-family: "Gotham Book", sans-serif;
+}
+
+.timing-article {
+  text-align: center;
+  border: 1px solid #fff;
+  width: 60%;
+  min-width: 60vw;
+  background-color: #fff;
+  padding: 5em;
+
+  * + * {
+    padding-top: 2em;
+  }
+}
+
+.timing-text {
+  font-family: "Gotham Book", sans-serif;
+  font-weight: 400;
+  line-height: 1.8;
+  margin: 0 4em;
+  font-size: clamp(0.8rem, 1vw, 1rem);
+}
+
+/* Avis */
+
+.avis-bg {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  min-height: 50vh;
+  position: relative;
+  justify-content: center;
+  background-color: #80705a;
+}
+
+.avis-article {
+  text-align: center;
+  color: #fff;
+  width: 80%;
+  min-width: 60vw;
+
+  padding: 5em;
+
+  * + * {
+    padding-top: 2em;
+  }
+
+  .avis-text {
+    font-family: "Gotham Book", sans-serif;
+    font-weight: 400;
+    line-height: 1.8;
+    margin: 0 4em;
+    font-size: clamp(0.8rem, 1vw, 1rem);
+    font-family: "Gotham Book";
+    font-style: italic;
+    font-weight: 800;
+  }
+
+  .btn-avis {
+    display: inline-block;
+    text-decoration: none;
+    color: #fff;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-top: 50px;
+    font-size: 1rem;
+    padding: 0.5em 1.25em;
+    border: 2px solid #fff;
+    border-radius: 2em;
+    transition: transform 250ms ease-in-out, opacity 250ms linear;
+    font-size: clamp(0.7rem, 1vw, 1rem);
+    white-space: nowrap;
+  }
+
+  .disabled {
+    opacity: 0.5;
+    //pointer-events: none;
+    cursor: default;
+  }
+
+  .btn-avis + .btn-avis {
+    margin: 2em;
+  }
+  .btn-avis:hover,
+  .btn-avis:focus {
+    //transform: scale(1.1);
+    //opacity: 0.9;
+    background-color: #fff;
+    color: #80705a;
+  }
+}
+
+/* Partenaires */
+
+.partenaires-container {
+  padding-top: 100px;
+}
+
+.split {
+  margin: 0 auto;
+  width: 75%;
+  display: flex;
+  gap: 1em;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 100px;
+
+  & > * {
+    flex-basis: 30%;
+    min-width: 15em;
+  }
+}
+
+.partenaires-title {
+  font-family: "Gotham Book", sans-serif;
+  text-align: center;
+  font-weight: 500;
+  margin-bottom: 50px;
+}
+
+.featured {
+  //background: #eee;
+
+  &__item {
+    position: relative;
+    transform: scale(0.7);
+    transition: transform 500ms ease-in-out;
+    text-decoration: none;
+    color: #333;
+    text-align: center;
+    line-height: 1.2;
+
+    display: flex;
+    align-items: center;
+
+    &:hover,
+    &:focus {
+      transform: scale(0.8);
+
+      .featured__details {
+        opacity: 1;
+        text-shadow: 0 0 1em rgba(#fff, 1);
+      }
+    }
+  }
+
+  &__details {
+    opacity: 0;
+    transition: opacity 250ms linear;
+
+    span {
+      display: block;
+      font-weight: 700;
+      font-size: 2.5rem;
+    }
+  }
+}
+
+/* Footer */
+
+.footer-container {
+  display: flex;
+  width: 100%;
+  max-width: 100vw;
+  height: 50%;
+  min-height: 50vh;
+  align-items: center;
+  height: 100%;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px -25px 55px;
+}
+
+.footer-social {
+  width: 30%;
+  min-width: 30vw;
+}
+
+.split-social {
+  margin: 0 auto;
+  width: 75%;
+  display: flex;
+  gap: 1em;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 100px;
+
+  & > * {
+    flex-basis: 30%;
+    min-width: 15em;
+  }
+}
+
+.mailchimp-block,
+.social-block {
+  height: 60%;
+  min-height: 200px;
+}
+
+.footer-contact {
+  width: 40%;
+  min-width: 40vw;
+
+  .btn-contact {
+    /*display: inline-block;
+    text-decoration: none;
+    color: #111;
+    background-color: #e1e1e1;
+    font-size: clamp(0.8rem, 2vw, 1.2rem);
+    padding: 0.5em 1.25em;
+    border-radius: 2em;
+    transition: transform 250ms ease-in-out, opacity 250ms linear;*/
+    margin-bottom: 40px;
+    padding: 0.5em 1em;
+    font-size: clamp(0.8rem, 2vw, 1.2rem);
+  }
+
+  /*.btn-contact:hover {
+    font-weight: 800;
+    background-color: #d6d6d6;
+  }*/
+}
+
+.footer-conditions {
+  position: relative;
+
+  .rules {
+    font-size: 0.65rem;
+
+    font-size: clamp(0.5rem, 1vw, 0.8rem);
+    color: #7b7b7b;
+    width: 90%;
+  }
+}
+
+.checkbox-container {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox-container label {
+  cursor: pointer;
+  display: flex;
+  color: #666;
+  font-size: 0.65rem;
+  padding: 0.5em;
+}
+
+.checkbox-container input[type="checkbox"] {
+  cursor: pointer;
+  opacity: 0;
+  position: absolute;
+}
+
+.checkbox-container label::before {
+  content: "";
+  background-color: #fff;
+  border: 1px solid #666;
+  display: inline-block;
+  position: absolute;
+  left: 0px;
+  top: 10px;
+  width: 20px;
+  height: 20px;
+}
+
+.label {
+  margin-left: 20px;
+}
+
+.label:after {
+  content: "\2713";
+  font-size: 1.1rem;
+  display: inline-block;
+  position: absolute;
+  top: 6px;
+  left: 4px;
+  transform: scale(0);
+  transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label:after {
+  transform: scale(1);
+}
+
+.footer-contact-check-text {
+  color: #5b5b5b;
+  font-size: 0.8rem;
+}
+
+.footer-social {
+}
+
+.contact-us {
+  padding-bottom: 5px;
+}
+
+.footer-social-email {
+  margin-top: 50px;
+  color: #111;
+  text-decoration: none;
+}
+
+.footer-social-email:hover {
+  color: #80705a;
+}
+
+.footer-logo {
+  width: 30%;
+  min-width: 30vw;
+  display: flex;
+  align-items: center;
+  height: 100%;
+  //min-height: 100vh;
+  position: relative;
+  justify-content: center;
+}
+
+.footer-logo-link {
+  width: 75%;
+}
+
+.footer-logo-img {
+  transition: transform 250ms ease-in-out;
+  transform: scale(0.8);
+}
+
+.footer-logo-img:hover {
+  transform: scale(0.85);
+}
+
+.social {
+  margin-top: 40px;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  //gap: 2em;
+
+  &__link {
+    width: clamp(32px, 4vw, 64px);
+  }
+
+  &__image {
+    //float: left;
+    height: auto;
+    width: 100%;
+    transition: transform 250ms ease-in-out;
+  }
+
+  &__image:hover {
+    transform: scale(1.2);
+  }
+}
+
+.social__link + .social__link {
+  margin-left: 2em;
+}
+
+.copyright {
+  width: 100%;
+  height: 75px;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  background-color: #262626;
+  display: flex;
+}
+
+.copyright-text {
+  font-size: clamp(0.5rem, 1vw, 1rem);
+  font-weight: 400;
+  color: #fff;
+  text-align: center;
+  line-height: 2em;
+
+  a {
+    color: #fff;
+  }
+
+  a + a {
+    padding-left: 10px;
+  }
+
+  a:hover {
+    color: #d6d6d6;
+  }
+}
+
+.mentions-links-block {
+  a {
+    color: #222;
+    text-decoration: none;
+  }
+
+  a:hover {
+    color: #80705a;
+  }
+}
+
+/* Mentions légales */
+
+.mentions-container {
+  width: 100%;
+}
+
+.mentions-logo {
+  margin: 0 auto;
+  padding-top: 100px;
+  width: 20%;
+  min-width: 20vw;
+  display: flex;
+  align-items: center;
+  position: relative;
+  justify-content: center;
+}
+
+.mentions-logo-img {
+  transition: transform 500ms ease-in-out;
+  transform: scale(1);
+}
+
+.mentions-logo-img:hover {
+  transform: scale(1.1);
+}
+
+.mentions-content {
+  width: 80%;
+  position: relative;
+  justify-content: center;
+  margin: 0 auto;
+
+  h1 {
+    line-height: 4em;
+    color: #262626;
+  }
+
+  h2 {
+    line-height: 3em;
+    color: #80705a;
+  }
+
+  p {
+    line-height: 1.6em;
+    margin-bottom: 20px;
+    text-align: justify;
+  }
+
+  a {
+    color: #888888;
+    text-decoration: none;
+  }
+
+  b {
+    font-size: clamp(0.9rem, 1vw, 1.1rem);
+  }
+
+  a:hover {
+    color: #636363;
+    text-decoration: none;
+  }
+
+  li {
+    margin-left: 25px;
+    padding: 5px;
+    text-align: justify;
+
+    font-size: clamp(0.8rem, 1vw, 1rem);
+    font-weight: 400;
+  }
+}
+
+.retour-button {
+  text-align: center;
+  padding: 4em;
+
+  .btn-retour:hover {
+    color: #fff;
+  }
+}
+
+.note-maj {
+  font-style: italic;
+  margin-top: -20px;
+  margin-bottom: 20px;
+  font-size: 0.8rem;
+}
+
+.presentation-site {
 }
