--- a/css/main.scss
+++ b/css/main.scss
@@ -501,7 +501,6 @@ h1 {
     margin-top: 150px;
     display: flex;
     flex-direction: column;
-    width: 85%;
     overflow: hidden;
 
     padding: 0 calc(max(10%, 100px));
@@ -528,7 +527,6 @@ h1 {
     margin-top: 150px;
     display: flex;
     flex-direction: column;
-    width: 85%;
     overflow: hidden;
 
     padding: 0 calc(max(10%, 100px));
@@ -544,8 +542,8 @@ h1 {
 }
 
 .titre {
-  height: 20%;
-  min-height: 100px;
+  //height: 20%;
+  //min-height: 100px;
   align-items: flex-end;
   display: flex;
   position: relative;
