corr video playsinline safari font bold

--- a/css/main.scss
+++ b/css/main.scss
@@ -78,7 +78,8 @@ p {
 }
 
 .bold {
-  font-weight: bold;
+  //font-weight: bold;
+  font-family: "Gotham Bold";
 }
 
 .spacing > * + * {
@@ -1019,7 +1020,9 @@ h1 {
 .equipe-pagination {
   position: relative;
   display: inline-block;
-  font-family: "Gotham", sans-serif;
+
+  font-family: "Gotham Book";
+  font-weight: 700;
   justify-content: left;
   padding: 0;
 }
