liens vers googleform corr sliders

--- a/css/main.scss
+++ b/css/main.scss
@@ -1382,8 +1382,7 @@ h1 {
   .btn-avis + .btn-avis {
     margin: 2em;
   }
-  .btn-avis:hover,
-  .btn-avis:focus {
+  .btn-avis:hover {
     //transform: scale(1.1);
     //opacity: 0.9;
     background-color: #fff;
