--- a/css/main.scss
+++ b/css/main.scss
@@ -325,11 +325,10 @@ button {
   position: absolute;
   bottom: 50px;
   //justify-content: center;
-  left: 50%;
+  //left: 50%;
   height: 50px;
-  transform: translateX(-50%);
-  width: 50px;
-  text-align: center;
+  width: 100%;
+  //transform: translateX(-50%);
   animation-duration: 1s;
   animation-name: fadein;
   //animation-delay: 1s;
@@ -337,19 +336,43 @@ button {
 
 .arrow {
   position: relative;
-  border: solid #80705a;
-  border-width: 0 2px 2px 0;
   display: inline-block;
-  padding: 10px;
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
+  /* transform: rotate(45deg);
+  -webkit-transform: rotate(45deg); */
   cursor: pointer;
   top: 0;
   transition: top ease-in-out 0.5s;
+    
+  margin: 0 auto;
+}
+
+
+@media screen and (min-width: 1201px) {
+  .arrow {
+    width: 40px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1200px) {
+  .arrow {
+    width: 32px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .arrow {
+    width: 24px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
 
 .arrow:hover {
-  top: -10px;
+  top: -6px;
 }
 
 @media screen and (max-width: 768px) {
