--- a/css/main.scss
+++ b/css/main.scss
@@ -1292,7 +1292,7 @@ h1 {
   background-image: url(../assets/images/timing_office.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: right center;
 }
 
 .timing-title {
@@ -1304,8 +1304,6 @@ h1 {
 .timing-article {
   text-align: center;
   border: 1px solid #fff;
-  width: 60%;
-  min-width: 60vw;
   background-color: #fff;
   // padding: 5em;
 
@@ -1317,18 +1315,40 @@ h1 {
 @media screen and (min-width: 1201px) {
   .timing-article {
     padding: 5em;
+    width: 60%;
+    min-width: 60vw;
   }
 }
 
 @media screen and (min-width: 1025px) and (max-width: 1200px) {
   .timing-article {
     padding: 2.5em;
+    width: 60%;
+    min-width: 60vw;
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
   .timing-article {
     padding: 2em;
+    width: 60%;
+    min-width: 60vw;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .timing-article {
+    padding: 1em;
+    width: 80%;
+    min-width: 80vw;
+  }
+}
+
+@media screen  and (max-width: 480px) {
+  .timing-article {
+    padding: 2em 0.5em;
+    width: 80%;
+    min-width: 80vw;
   }
 }
 
@@ -1337,7 +1357,7 @@ h1 {
   font-weight: 400;
   line-height: 1.8;
   margin: 0 4em;
-  font-size: clamp(0.8rem, 1vw, 1rem);
+  font-size: clamp(0.7em, 1vw, 1em);
 }
 
 /* Avis */
@@ -2103,16 +2123,19 @@ input {
   position: fixed;
   bottom: 0;
   width: 100%;
-  //display: none;
   height: 0px;
   background-color: #262626;
   color: white;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
 
   .box {
-    align-items: center;
     position: relative;
-    display: flex;
-    padding: 10px 10px;
+    // display: none;
+
+    // padding: 10px 10px;
   }
 
   p {
