--- a/css/main.scss
+++ b/css/main.scss
@@ -10,6 +10,10 @@
   src: url(../assets/fonts/Gotham-Book.otf) format("opentype");
 }
 
+:root {
+  --main-filter-color: #5e513f;
+}
+
 /* Main */
 
 *,
@@ -22,6 +26,7 @@
 
 html {
   --header-height: 100vh;
+  overflow-x: hidden;
 }
 
 body {
@@ -57,6 +62,7 @@ h1 {
   font-size: clamp(1.4rem, 4vw, 2rem);
   line-height: 1.2;
   text-transform: uppercase;
+  font-weight: 400;
 }
 
 h2 {
@@ -92,7 +98,7 @@ p {
   color: #80705a;
   font-weight: 700;
   text-transform: uppercase;
-  font-size: clamp(0.8rem, 1vw, 1rem);
+  font-size: clamp(0.6em, 1vw, 1em);
   padding: 0.5em 1.25em;
   border: 2px solid #80705a;
   border-radius: 2em;
@@ -130,6 +136,7 @@ p {
   // --header-height: 100vh;
   height: calc(var(--header-height));
   width: 100%;
+  max-width: 100vw;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -138,8 +145,11 @@ p {
   top: 0;
   transition: ease 0.4s;
   z-index: 99;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
-    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+
+  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px; */
 
   &--scrolled {
     position: fixed;
@@ -228,7 +238,7 @@ button {
     text-decoration: none;
     color: #80705a;
     font-family: beloved-sans, sans-serif;
-    font-weight: 700;
+    font-weight: 400;
     letter-spacing: 0.22rem;
     font-style: normal;
     text-transform: uppercase;
@@ -294,7 +304,6 @@ button {
     transition: width 0.5s;
   }
 
-  
 
   .lang {
     color: #80705a;
@@ -414,17 +423,22 @@ button {
 
   .mobile-navbar {
     position: relative;
+    // height: 126px;
     height: 126px;
     // max-height: 10vh;
     width: 100%;
     max-width: 100vw;
     overflow: hidden;
+    
   }
 
   .header {
-    height: 10vh;
-    max-height: 10vh;
+    /* height: 10vh;
+    max-height: 10vh; */
     position: fixed;
+    height: 75px;
+    z-index: 100;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
     top: 0;
 
     //border: 1px solid red;
@@ -445,7 +459,7 @@ button {
   .mobile-nav-logo-img {
     display: block;
     opacity: 1;
-  }
+   }
 
   .hamburger {
     position: absolute;
@@ -488,6 +502,7 @@ button {
     background: #fff;
     height: 100vh;
     width: 100%;
+    max-width: 100vw;
     flex-direction: column;
     margin-left: auto;
     align-items: center;
@@ -651,6 +666,7 @@ button {
 
 .video-title {
   color: #80705a;
+  text-align: left;
 }
 
 @media screen and (min-width: 769px) {
@@ -773,7 +789,6 @@ h1 {
     
   }
 
-
   .image {
     height: 100vh;
     width: 50vw;
@@ -814,13 +829,28 @@ h1 {
   .container-equipe {
     display: flex;
   }
+  .container-projet {
+    height: 100vh;
+    width: 200%;
+    max-width: 200vw;
+    //display: flex;
+  }
+  
+  .container-equipe {
+    height: 100vh;
+    width: 200%;
+    max-width: 200vw;
+    //display: flex;
+  }
 
   .projet-slide {
     flex-direction: column;
+    width: 100%;
   }
 
   .origine-slide {
     flex-direction: column;
+    width: 100%;
   }
 
   .equipe-slide {
@@ -845,8 +875,8 @@ h1 {
 
   .projet-image,
   .origine-image {
-    height: 50vh;
-    max-height: 50vh;
+    height: 33vh;
+    max-height: 33vh;
     width: 100%;
     overflow: hidden;
   }
@@ -854,14 +884,14 @@ h1 {
   
   .equipe-image,
   .florent-image {
-    height: 50vh;
-    max-height: 50vh;
+    height: 33vh;
+    max-height: 33vh;
     width: 100%;
     overflow: hidden;
   }
 
   .image {
-    height: 50vh;
+    height: 33vh;
     width: 100%;
   }
   
@@ -870,14 +900,14 @@ h1 {
     width: 100%;
     position: absolute;
     left: 0;
-    top: 50%;
+    top: 33vh;
   }
 
   .equipe-content {
     width: 100%;
     position: absolute;
     left: 0;
-    top: 50%;
+    top: 33vh;
   }
 
   .projet-article, .equipe-article {
@@ -885,11 +915,15 @@ h1 {
   }
 
   .image-antiquaille {
-    margin-top: 50px;
+    margin-top: 70px;
   }
 
   .image-papier {
-    margin-top: -100px;
+    margin-top: -220px;
+  }
+
+  .image-science {
+    margin-top: -120px;
   }
 
   .article {
@@ -1198,12 +1232,26 @@ h1 {
 }
 
 .pagination {
-  height: 25%;
   //padding: 0 10%;
   display: flex;
-  align-items: flex-start;
   position: relative;
   width: 100%;
+}
+
+@media screen and (min-width: 769px) {
+  .pagination {
+    padding-top: 40px;
+    align-items: flex-start;
+
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .pagination {
+    align-items: flex-end;
+    padding-top: 20px;
+  }
+  
 }
 
 .projet-pagination,
@@ -1231,7 +1279,8 @@ h1 {
 
 .projet-page-btn + .projet-page-btn,
 .equipe-page-btn + .equipe-page-btn {
-  margin: 1em;
+
+  margin: 0 1em;
 }
 
 .projet-page-btn::after,
@@ -1265,6 +1314,7 @@ h1 {
 
 .produit-section {
   width: 100%;
+  max-width: 100vw;
 }
 
 .a-propos {
@@ -1278,11 +1328,23 @@ h1 {
   justify-content: center;
 }
 
-.a-propos-both {
-  height: 100%;
-  padding-top: 150px;
-  padding-bottom: 50px;
+@media screen and (min-width: 769px) {
+  .a-propos-both {
+    height: 100%;
+    padding-top: 150px;
+    padding-bottom: 50px;
+  }
 }
+
+@media screen and (max-width: 768px) {
+  .a-propos-both {
+    height: 100%;
+    padding-top: 0;
+    //padding-bottom: 50px;
+  }
+}
+
+
 
 .produit-title {
   text-align: center;
@@ -1418,9 +1480,18 @@ h1 {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 481px) and (max-width: 768px) {
   .produit-article {
     padding: 0 calc(max(10%, 50px)) 0 calc(max(10%, 100px));
+    p {
+      line-height: 1.8em;
+    }
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .produit-article {
+    padding: 0 calc(max(10%, 20px)) 0 calc(max(10%, 50px));
     p {
       line-height: 1.8em;
     }
@@ -1469,7 +1540,7 @@ h1 {
 
     
     .produit-article-title {
-      color: #868481;
+      color: #80705a;
       border-bottom: 2px solid #80705a;
     }
 
@@ -1497,24 +1568,24 @@ h1 {
     background-image: url(../assets/images/chimie.jpg);
     background-position: center center;
     background-size: cover;
-    background-color: #664513ad;
-    background-blend-mode: soft-light;
+    background-color: var(--main-filter-color);
+    background-blend-mode: multiply;
   }
   
   .square-2 {
     background-image: url(../assets/images/creme_mains.jpeg);
     background-position: center center;
     background-size: cover;
-    background-color: #816e52c2;
-    background-blend-mode: soft-light;
+    background-color: var(--main-filter-color);
+    background-blend-mode: multiply;
   }
   
   .square-3 {
     background-image: url(../assets/images/water_drops.jpeg);
     background-position: center center;
     background-size: cover;
-    background-color: #856f4ea2;
-    background-blend-mode: soft-light;
+    background-color: var(--main-filter-color);
+    background-blend-mode: multiply;
   }
   
   .square-4 {
@@ -1522,16 +1593,16 @@ h1 {
     background-position: center center;
     background-size: cover;
     background-position-y: 0px;
-    background-color: #726654da;
-    background-blend-mode: soft-light;
+    background-color: var(--main-filter-color);
+    background-blend-mode: multiply;
   }
   
   .square-5 {
     background-image: url(../assets/images/carte_paiement.jpeg);
     background-position: center center;
     background-size: cover;
-    background-color: #6b5637c0;
-    background-blend-mode: soft-light;
+    background-color: var(--main-filter-color);
+    background-blend-mode: multiply;
   }
 
   .number {
@@ -1599,11 +1670,23 @@ h1 {
   max-height: 75%;
 }
 
+@media screen and (min-width: 769px) {
+  .separator {
+    display: block;
+    background-color: #fff;
+    width: 100%;
+    height: 200px;
+  }
+  }
+
+
+@media screen and (max-width: 768px) {
 .separator {
   display: block;
   background-color: #fff;
   width: 100%;
-  height: 200px;
+  height: 100px;
+}
 }
 
 /* Timing */
@@ -1638,11 +1721,23 @@ h1 {
   }
 }
 
+.timing-text {
+  font-family: "Gotham Book", sans-serif;
+  font-weight: 400;
+  line-height: 1.8;
+  margin: 0 4em;
+  font-size: clamp(0.7em, 1vw, 1em);
+}
+
 @media screen and (min-width: 1201px) {
   .timing-article {
     padding: 5em;
     width: 60%;
     min-width: 60vw;
+  }
+
+  .timing-text {
+    margin: 0 4em;
   }
 }
 
@@ -1652,6 +1747,10 @@ h1 {
     width: 60%;
     min-width: 60vw;
   }
+
+  .timing-text {
+    margin: 0 4em;
+  }
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
@@ -1659,6 +1758,10 @@ h1 {
     padding: 2em;
     width: 60%;
     min-width: 60vw;
+  }
+
+  .timing-text {
+    margin: 0 2em;
   }
 }
 
@@ -1668,6 +1771,10 @@ h1 {
     width: 80%;
     min-width: 80vw;
   }
+
+  .timing-text {
+    margin: 0 2em;
+  }
 }
 
 @media screen  and (max-width: 480px) {
@@ -1676,15 +1783,13 @@ h1 {
     width: 80%;
     min-width: 80vw;
   }
+
+  .timing-text {
+    margin: 0 2em;
+  }
 }
 
-.timing-text {
-  font-family: "Gotham Book", sans-serif;
-  font-weight: 400;
-  line-height: 1.8;
-  margin: 0 4em;
-  font-size: clamp(0.7em, 1vw, 1em);
-}
+
 
 /* Avis */
 
@@ -1701,6 +1806,7 @@ h1 {
 .avis-title {
   font-family: "Gotham Book", sans-serif;
   font-size: clamp(1.6em, 2.5vw, 2.4em);
+  font-weight: 400;
 }
 
 .avis-article {
@@ -1819,27 +1925,52 @@ h1 {
   padding-top: 100px;
 }
 
-.split {
-  margin: 0 auto;
-  width: 75%;
-  display: flex;
-  gap: 1em;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-bottom: 100px;
-
-  & > * {
-    flex-basis: 30%;
-    min-width: 15em;
-  }
-}
-
 .partenaires-title {
   font-family: "Gotham Book", sans-serif;
   text-align: center;
   font-weight: 500;
   margin-bottom: 50px;
 }
+
+
+
+@media screen  and (min-width: 481px) {
+  .split {
+    margin: 0 auto;
+    width: 75%;
+    display: flex;
+    gap: 1em;
+    //flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 100px;
+  
+    & > * {
+      flex-basis: 30%;
+      //min-width: 12em;
+    }
+  }
+
+
+}
+
+@media screen  and (max-width: 480px) {
+  .split {
+    margin: 0 auto;
+    width: 80%;
+    display: flex;
+    gap: 20px;
+    //flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 100px;
+  
+    & > * {
+      flex-basis: 30%;
+      //min-width: 15em;
+    }
+  }
+}
+
+
 
 .featured {
   //background: #eee;
@@ -1855,7 +1986,7 @@ h1 {
 
     display: flex;
     align-items: center;
-    min-height: 250px;
+    //min-height: 250px;
 
     &:hover,
     &:focus {
@@ -1866,6 +1997,10 @@ h1 {
         text-shadow: 0 0 1em rgba(#fff, 1);
       }
     }
+  }
+
+  &__img {
+    //width: 50px;
   }
 
   &__details {
@@ -1887,7 +2022,7 @@ h1 {
   max-width: 100vw;
   height: 50%;
   align-items: center;
-  box-shadow: rgba(0, 0, 0, 0.2) 0px -25px 55px;
+  box-shadow:  rgba(0, 0, 0, 0.07) 0px -6px 20px, rgba(0, 0, 0, 0.07) 0px -12px 20px, rgba(0, 0, 0, 0.07) 0px -24px 40px;
   flex-wrap: wrap;
   display: flex;
 }
@@ -2071,7 +2206,6 @@ h1 {
   .social-block {
     padding-bottom: 20px;
   }
-
 }
 
 .footer-conditions {
@@ -2247,14 +2381,85 @@ h1 {
 
 .mentions-logo {
   margin: 0 auto;
-  padding-top: 100px;
-  width: 20%;
-  min-width: 20vw;
   display: flex;
   align-items: center;
   position: relative;
   justify-content: center;
 }
+
+@media screen and (min-width: 769px) {
+  .mentions-logo {
+    padding-top: 100px;
+    width: 20%;
+    min-width: 20vw;
+  }
+
+  .mentions-content {
+    justify-content: center;
+
+    p {
+      text-align: justify;
+    }
+    
+    h2 {
+      line-height: 3em;
+    }
+    li {
+      text-align: left;
+    }
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .mentions-logo {
+    padding-top: 100px;
+    width: 20%;
+    min-width: 20vw;
+  }
+
+  .mentions-content {
+    justify-content: left;
+
+    p {
+      text-align: left;
+    }
+    h2 {
+      line-height: 1.8em;
+    }
+    li {
+      text-align: left;
+    }
+  }
+}
+
+
+@media screen and (max-width: 480px) {
+  .mentions-logo {
+    padding-top: 50px;
+    width: 50%;
+    min-width: 50vw;
+  }
+
+  .mentions-content {
+    justify-content: left;
+
+    p {
+      text-align: left;
+    }
+
+    h2 {
+      padding-top: 20px;
+      //line-height: 1.8em;
+      padding-bottom: 10px;
+    }
+
+    li {
+      text-align: left;
+    }
+  }
+}
+
+
 
 .mentions-logo-img {
   transition: transform 500ms ease-in-out;
@@ -2268,7 +2473,6 @@ h1 {
 .mentions-content {
   width: 80%;
   position: relative;
-  justify-content: center;
   margin: 0 auto;
 
   h1 {
@@ -2277,14 +2481,13 @@ h1 {
   }
 
   h2 {
-    line-height: 3em;
     color: #80705a;
   }
 
   p {
     line-height: 1.6em;
     margin-bottom: 20px;
-    text-align: justify;
+    font-size: clamp(0.7em, 1vw, 1em);
   }
 
   a {
@@ -2305,9 +2508,8 @@ h1 {
   li {
     margin-left: 25px;
     padding: 5px;
-    text-align: justify;
 
-    font-size: clamp(0.8rem, 1vw, 1rem);
+    font-size: clamp(0.7em, 1vw, 1em);
     font-weight: 400;
   }
 }
@@ -2323,7 +2525,7 @@ h1 {
 
 .note-maj {
   font-style: italic;
-  margin-top: -20px;
+  margin-top: -10px;
   margin-bottom: 20px;
   font-size: 0.8rem;
 }
