--- a/css/main.scss
+++ b/css/main.scss
@@ -27,6 +27,7 @@
 html {
   --header-height: 100vh;
   overflow-x: hidden;
+  -webkit-font-smoothing: antialiased;
 }
 
 body {
@@ -1677,16 +1678,26 @@ h1 {
     width: 100%;
     height: 200px;
   }
+    
+  .separator-video {
+    display: none;
   }
-
+}
 
 @media screen and (max-width: 768px) {
-.separator {
-  display: block;
-  background-color: #fff;
-  width: 100%;
-  height: 100px;
-}
+  .separator {
+    display: block;
+    background-color: #fff;
+    width: 100%;
+    height: 100px;
+  }
+
+  .separator-video {
+    display: block;
+    background-color: #fff;
+    width: 100%;
+    height: 100px;
+  }
 }
 
 /* Timing */
@@ -2807,9 +2818,10 @@ input[type=text], input[type=email] {
 
 .cookies-consent {
   position: fixed;
-  bottom: 0;
+  bottom: -75px;
   width: 100%;
-  height: 0px;
+  // height: 0px;
+  height: 75px;
   background-color: #262626;
   opacity: 0.8;
   color: white;
@@ -2819,7 +2831,6 @@ input[type=text], input[type=email] {
   overflow: hidden;
 
   .box {
-    position: relative;
     // display: none;
 
     // padding: 10px 10px;
