--- a/css/main.scss
+++ b/css/main.scss
@@ -756,7 +756,8 @@ h1 {
 .produit-title,
 .equipe-title,
 .florent-title,
-.partenaires-title {
+.partenaires-title,
+.numbers-title {
   color: #80705a;
 }
 
@@ -2202,9 +2203,103 @@ h1 {
   }
 }
 
+/* Numbers */
+
+
+
+
+
+@media screen  and (min-width: 481px) {
+
+  .numbers-container {
+    padding-top: 100px;
+    background-color: #E7E4E0;
+    padding-bottom: 100px;
+    margin-bottom: 0;
+  }
+
+  .numbers-title {
+    font-family: "Gotham Book", sans-serif;
+    text-align: center;
+    font-weight: 500;
+    margin-bottom: 100px;
+  }
+
+  .split-numbers {
+    margin: 0 auto;
+    width: 75%;
+    display: flex;
+    gap: 1em;
+    //flex-wrap: wrap;
+    justify-content: center;
+
+    & > * {
+      flex-basis: 30%;
+      text-align: center;
+      
+      //min-width: 12em;
+    }
+  }
+}
+
+@media screen  and (max-width: 480px) {
+
+  .numbers-container {
+    padding-top: 50px;
+    background-color: #E7E4E0;
+    padding-bottom: 20px;
+  }
+
+  .numbers-title {
+    font-family: "Gotham Book", sans-serif;
+    text-align: center;
+    font-weight: 500;
+    margin-bottom: 50px;
+  }
+
+
+  .split-numbers {
+    margin: 0 auto;
+    width: 80%;
+    display: flex;
+    gap: 20px;
+    //flex-wrap: wrap;
+    justify-content: center;
+  
+    & > * {
+      flex-basis: 30%;
+      //min-width: 15em;
+  text-align: center;
+    }
+  }
+}
+
+.follow-number, .country-number, .participe-number {
+  font-family: "Gotham Book", sans-serif;
+  font-weight: 700;
+  font-size: clamp(1.5rem, 2.5vw, 4rem);
+}
+
+.text-number {
+  font-family: "Gotham Book", sans-serif;
+  font-weight: 400;
+  font-size: clamp(0.8rem, 1vw, 1.25rem);
+}
+
+
 /* Footer */
 
+footer {
+  margin: 0;
+  z-index: 2;
+  background-color: #E7E4E0;
+  height: 50%;
+  border-top: 1px solid  #E7E4E0;
+}
+
 .footer-container {
+  background-color: #FFF;
+  margin-top: 80px;
   width: 100%;
   max-width: 100vw;
   height: 50%;
