--- a/css/main.scss
+++ b/css/main.scss
@@ -1543,12 +1543,12 @@ h1 {
 
 @media screen and (min-width: 1201px) {
   .produit-title {
-    padding: 0 4em;
+    padding: 1em 4em;
   }
 
   .produit-apropos-text {
     padding: 1em 4em 0 4em;
-    line-height: 2.2em;
+    line-height: 1.4em;
   }
 }
 
